--- a/_config.yml
+++ b/_config.yml
@@ -281,7 +281,7 @@ compress_html:
 defaults:
   # _posts
   - scope:
-      path: ""
+      path: "docs/_posts/"
       type: posts
     values:
       layout: single
